--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Task Manager{% endblock %}</title>
-    <!-- Bootstrap CSS -->
+    
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background: #f5f5f5; /* Light grey background similar to Jira */
+            background: #f5f5f5; 
             font-family: 'Roboto', sans-serif;
         }
         .navbar {
-            background-color: #0747A6; /* Jira blue */
+            background-color: #0747A6; 
             color: white;
         }
         .card {
@@ -32,7 +32,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 bg-light sidebar">
-                <!-- Sidebar content here -->
+                
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link active" href="{% url 'user_dashboard' %}">Dashboard</a>
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    <!-- Bootstrap JS and dependencies -->
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
